[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
fake = { version = "2.9.2", features = ["dummy", "derive"] }
handlebars = "5.1.2"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }